--- a/src/main/java/com/zhch/example/jsoup/example.html
+++ b/src/main/java/com/zhch/example/jsoup/example.html
@@ -4,5 +4,9 @@
 </head>
 <body>
 	<p>Parsed HTML into a doc.</p>
+	<div id="test_for_html_entity">
+		<span>html entity &lt; and &gt; ok</span>
+		<span>html entity &#29764;bu ok</span>
+	</div>
 </body>
 </html>
